Added InfoActivity to display help and implemented help for the MapLocation and DisplayMessage.  Fixed Misc to have both a debug and release list.  Fixed the manifest to use preferExternal for the instalLocation.  Did other cleanup.
git-svn-id: http://svn.kenevans.net/Android/trunk@180 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/AndroidManifest.xml
+++ b/Misc/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.kenevans.android.misc" android:installLocation="auto" android:versionName="1.0.0.Beta1" android:versionCode="0">
+	package="net.kenevans.android.misc" android:installLocation="preferExternal"
+	    android:versionName="1.0.0.Beta1" android:versionCode="0">
 		
 	<uses-sdk android:minSdkVersion="8" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -33,6 +34,8 @@
 		<activity android:name=".MessageListenerActivity" android:label="@string/messagelistener_title">
 		</activity>
 		<activity android:name=".MapLocationActivity" android:label="@string/map_location_title">
+		</activity>
+		<activity android:name=".InfoActivity" android:label="@string/info_title">
 		</activity>
 		<!--
         <receiver android:name=".SMSMessageReceiver"> 
