Made changes trying to get it to work with mms-sms/conversations.  Is working, but there can be more than one _id found depending on the selection in the query,  Did not find a good way to handle this.
git-svn-id: http://svn.kenevans.net/Android/trunk@184 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/AndroidManifest.xml
+++ b/Misc/AndroidManifest.xml
@@ -29,6 +29,8 @@
 		</activity>
 		<activity android:name=".SMSTestActivity" android:label="@string/sms_title">
 		</activity>
+		<activity android:name=".SMSTest2Activity" android:label="@string/sms_title">
+		</activity>
 		<activity android:name=".DisplayMessageActivity" android:label="@string/displaymessage_title">
 		</activity>
 		<activity android:name=".MessageListenerActivity" android:label="@string/messagelistener_title">
