--- a/Misc/AndroidManifest.xml
+++ b/Misc/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <!--  Google Maps API -->
     <uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--  Application Info -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	
 	<application android:icon="@drawable/bluemouse"
 		android:label="@string/app_name">
@@ -38,6 +40,8 @@
 		<activity android:name=".MapLocationActivity" android:label="@string/map_location_title">
 		</activity>
 		<activity android:name=".InfoActivity" android:label="@string/info_title">
+		</activity>
+		<activity android:name=".AppsActivity" android:label="@string/apps_title">
 		</activity>
 		<!--
         <receiver android:name=".SMSMessageReceiver"> 
