--- a/Misc/AndroidManifest.xml
+++ b/Misc/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.kenevans.android.misc" android:installLocation="preferExternal"
-	    android:versionName="1.0.0.Beta1" android:versionCode="0">
-		
+	android:versionName="1.0.0.Beta2" android:versionCode="1">
+
 	<uses-sdk android:minSdkVersion="8" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.WRITE_SMS" />
 	<uses-permission android:name="android.permission.READ_SMS" />
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <!--  Google Maps API -->
-    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.RECEIVE_SMS" />
+	<!-- Google Maps API -->
+	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!--  Application Info -->
+	<!-- Application Info -->
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	
+
 	<application android:icon="@drawable/bluemouse"
 		android:label="@string/app_name">
-        <uses-library android:name="com.google.android.maps" />
+		<uses-library android:name="com.google.android.maps" />
 		<activity android:name=".MiscActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -33,9 +33,11 @@
 		</activity>
 		<activity android:name=".SMSTest2Activity" android:label="@string/sms_title">
 		</activity>
-		<activity android:name=".DisplayMessageActivity" android:label="@string/displaymessage_title">
+		<activity android:name=".DisplayMessageActivity"
+			android:label="@string/displaymessage_title">
 		</activity>
-		<activity android:name=".MessageListenerActivity" android:label="@string/messagelistener_title">
+		<activity android:name=".MessageListenerActivity"
+			android:label="@string/messagelistener_title">
 		</activity>
 		<activity android:name=".MapLocationActivity" android:label="@string/map_location_title">
 		</activity>
@@ -43,12 +45,8 @@
 		</activity>
 		<activity android:name=".AppsActivity" android:label="@string/apps_title">
 		</activity>
-		<!--
-        <receiver android:name=".SMSMessageReceiver"> 
-            <intent-filter> 
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" /> 
-            </intent-filter> 
-        </receiver>
-        -->
+		<!-- <receiver android:name=".SMSMessageReceiver"> <intent-filter> <action 
+			android:name="android.provider.Telephony.SMS_RECEIVED" /> </intent-filter> 
+			</receiver> -->
 	</application>
 </manifest>
