--- a/Daily Dilbert/AndroidManifest.xml
+++ b/Daily Dilbert/AndroidManifest.xml
@@ -6,6 +6,7 @@
       android:versionName="1.0.0.Beta1">
     <uses-sdk android:minSdkVersion="8" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application android:icon="@drawable/dilbert" android:label="@string/app_name">
         <activity android:name=".DailyDilbertActivity"
