--- a/Daily Dilbert/AndroidManifest.xml
+++ b/Daily Dilbert/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="net.kenevans.android.dailydilbert"
       android:installLocation="preferExternal"
       android:versionCode="1"
-      android:versionName="1.0.0.Beta1">
+      android:versionName="1.0.0">
     <uses-sdk android:minSdkVersion="8" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
