--- a/Daily Dilbert/AndroidManifest.xml
+++ b/Daily Dilbert/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.kenevans.android.dailydilbert"
       android:installLocation="preferExternal"
-      android:versionCode="4"
-      android:versionName="1.1.0">
+      android:versionCode="5"
+      android:versionName="1.2.0">
     <uses-sdk android:minSdkVersion="8" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,6 +17,8 @@
             </intent-filter>
         </activity>
 		<activity android:name=".ZoomActivity" android:label="@string/zoom_title">
+		</activity>
+		<activity android:name=".FullZoomActivity" android:label="@string/fullzoom_title">
 		</activity>
 		<activity android:name=".InfoActivity" android:label="@string/info_title">
 		</activity>
