--- a/Misc/AndroidManifest.xml
+++ b/Misc/AndroidManifest.xml
@@ -10,6 +10,7 @@
 	<uses-permission android:name="android.permission.RECEIVE_SMS" />
 	<!-- Call Logs -->
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
+	<uses-permission android:name="android.permission.WRITE_CONTACTS" />
 	<!-- Google Maps API -->
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
