--- a/Misc/AndroidManifest.xml
+++ b/Misc/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.kenevans.android.misc" android:installLocation="preferExternal"
-	android:versionName="1.0.0.Beta3" android:versionCode="3">
+	android:versionName="1.0.0" android:versionCode="4">
 
-	<uses-sdk android:minSdkVersion="8" />
+	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"  />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.READ_SMS" />
 	<uses-permission android:name="android.permission.RECEIVE_SMS" />
