--- a/Heart Monitor/AndroidManifest.xml
+++ b/Heart Monitor/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.kenevans.heartmonitor"
+    android:installLocation="preferExternal"
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="10" />
+	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"  />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
