--- a/Heart Monitor/AndroidManifest.xml
+++ b/Heart Monitor/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.kenevans.heartmonitor"
     android:installLocation="preferExternal"
-    android:versionCode="4"
-    android:versionName="2.2" >
+    android:versionCode="5"
+    android:versionName="2.3" >
 
 	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"  />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -11,6 +11,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
     
     <application
+        android:allowBackup="true"
         android:icon="@drawable/heartmonitor"
         android:label="@string/app_name" >
         <activity
