Changed targetSdkVersion 10 - 19.  Makes the Misc icon appear at the top on 4.1.2 and 4.4.
git-svn-id: http://svn.kenevans.net/Android/trunk@595 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/AndroidManifest.xml
+++ b/Misc/AndroidManifest.xml
@@ -5,10 +5,7 @@
     android:versionCode="9"
     android:versionName="1.4.0" >
 
-    <!-- Messaging -->
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="10" />
+	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19"  />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
