--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -20,14 +20,18 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".MonitorActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DeviceScanActivity"
+                  android:label="@string/device_scan_name"
+                  android:theme="@android:style/Theme.Holo" >
+         </activity>
+         <service android:name="net.kenevans.android.hxmmonitor.BluetoothLeService" android:enabled="true"/>
     </application>
 
 </manifest>
