Have a test implementation of device control.
git-svn-id: http://svn.kenevans.net/Android/trunk@630 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -28,10 +28,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".DeviceScanActivity"
+                  android:label="@string/menu_test"
+                  android:theme="@android:style/Theme.Holo" >
+         </activity>
+        <activity android:name=".DeviceControlActivity"
                   android:label="@string/device_scan_name"
                   android:theme="@android:style/Theme.Holo" >
          </activity>
-         <service android:name="net.kenevans.android.hxmmonitor.BluetoothLeService" android:enabled="true"/>
+        <service android:name="net.kenevans.android.hxmmonitor.BluetoothLeService" android:enabled="true"/>
     </application>
 
 </manifest>
