--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -22,19 +22,19 @@
         <activity
             android:name=".MonitorActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity android:name=".DeviceScanActivity"
+                  android:label="@string/device_scan_name"
+                  android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity android:name=".DeviceMonitorActivity"
+                  android:label="@string/device_monitor_name"
+                  android:theme="@android:style/Theme.Holo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DeviceScanActivity"
-                  android:label="@string/menu_test"
-                  android:theme="@android:style/Theme.Holo" >
-         </activity>
-        <activity android:name=".DeviceControlActivity"
-                  android:label="@string/device_scan_name"
-                  android:theme="@android:style/Theme.Holo" >
-         </activity>
         <service android:name="net.kenevans.android.hxmmonitor.BluetoothLeService" android:enabled="true"/>
     </application>
 
