Added PlotAvtivity.  Working with dummy data.
git-svn-id: http://svn.kenevans.net/Android/trunk@643 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -27,6 +27,10 @@
                   android:label="@string/device_scan_name"
                   android:theme="@android:style/Theme.Holo" >
         </activity>
+        <activity android:name=".PlotActivity"
+                  android:label="@string/plot_name"
+                  android:theme="@android:style/Theme.Holo" >
+        </activity>
         <activity android:name=".DeviceMonitorActivity"
                   android:label="@string/device_monitor_name"
                   android:theme="@android:style/Theme.Holo" >
