--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -8,38 +8,49 @@
         android:minSdkVersion="18"
         android:targetSdkVersion="21" />
 
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="false" />
 
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MonitorActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity android:name=".DeviceScanActivity"
-                  android:label="@string/device_scan_name"
-                  android:theme="@android:style/Theme.Holo" >
-        </activity>
-        <activity android:name=".PlotActivity"
-                  android:label="@string/plot_name"
-                  android:theme="@android:style/Theme.Holo" >
-        </activity>
-        <activity android:name=".DeviceMonitorActivity"
-                  android:label="@string/device_monitor_name"
-                  android:theme="@android:style/Theme.Holo" >
+         <activity
+            android:name=".DeviceMonitorActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="net.kenevans.android.hxmmonitor.BluetoothLeService" android:enabled="true"/>
+        <activity
+            android:name=".DeviceScanActivity"
+            android:label="@string/title_activity_device_scan"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name=".PlotActivity"
+            android:label="@string/title_activity_plot"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name=".SessionManagerActivity"
+            android:label="@string/title_activity_session_manager"
+            android:theme="@android:style/Theme.Holo" >
+         </activity>
+
+        <service
+            android:name=".BluetoothLeService"
+            android:enabled="true" >
+        </service>
     </application>
 
 </manifest>
