--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:allowBackup="true"
         android:supportsRtl="false"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/hxmmonitor"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
          <activity
@@ -28,25 +28,27 @@
             android:theme="@android:style/Theme.Holo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".DeviceScanActivity"
+            android:parentActivityName=".DeviceMonitorActivity"
             android:label="@string/title_activity_device_scan"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
             android:name=".PlotActivity"
+            android:parentActivityName=".DeviceMonitorActivity"
             android:label="@string/title_activity_plot"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
             android:name=".SessionManagerActivity"
+            android:parentActivityName=".DeviceMonitorActivity"
             android:label="@string/title_activity_session_manager"
             android:theme="@android:style/Theme.Holo" >
-         </activity>
+        </activity>
 
         <service
             android:name=".BluetoothLeService"
