Deleted saved versions of DbAdapter.  Renamed BluetoothLeService -> HxMBleService.
git-svn-id: http://svn.kenevans.net/Android/trunk@654 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -51,7 +51,7 @@
         </activity>
 
         <service
-            android:name=".BluetoothLeService"
+            android:name=".HxMBleService"
             android:enabled="true" >
         </service>
     </application>
