--- a/HxM Monitor/AndroidManifest.xml
+++ b/HxM Monitor/AndroidManifest.xml
@@ -18,38 +18,44 @@
 
     <application
         android:allowBackup="true"
-        android:supportsRtl="false"
         android:icon="@drawable/hxmmonitor"
         android:label="@string/app_name"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme" >
-         <activity
+        <activity
             android:name=".DeviceMonitorActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".DeviceScanActivity"
-            android:parentActivityName=".DeviceMonitorActivity"
             android:label="@string/title_activity_device_scan"
+            android:parentActivityName=".DeviceMonitorActivity"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
             android:name=".PlotActivity"
-            android:parentActivityName=".DeviceMonitorActivity"
             android:label="@string/title_activity_plot"
+            android:parentActivityName=".DeviceMonitorActivity"
             android:theme="@android:style/Theme.Holo" >
         </activity>
         <activity
             android:name=".SessionManagerActivity"
-            android:parentActivityName=".DeviceMonitorActivity"
             android:label="@string/title_activity_session_manager"
+            android:parentActivityName=".DeviceMonitorActivity"
             android:theme="@android:style/Theme.Holo" >
         </activity>
-
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        
         <service
             android:name=".HxMBleService"
             android:enabled="true" >
