--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.0'
     defaultConfig {
         applicationId "net.kenevans.android.hxmmonitor"
         minSdkVersion 18
         targetSdkVersion 23
+        versionCode 5
+        versionName '3.0'
     }
     buildTypes {
         release {
@@ -19,6 +21,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.4.0'
     compile files('libs/afreechart-0.0.4.jar')
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
 }
