--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,26 @@ apply plugin: 'com.android.application'
 
 android {
     // AFreeChart does not work with Android 9 (API 28)
+    // Cannot use Androidx with API 27
     compileSdkVersion 27
     defaultConfig {
         applicationId "net.kenevans.android.hxmmonitor"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 27
-        versionCode 7
-        versionName '3.2.0'
+        versionCode 8
+        versionName "3.3.0"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            applicationVariants.all { variant ->
+                variant.outputs.all { output ->
+                    def appName = "HxM Monitor"
+                    def formattedDate = new Date().format('yyyyMMddHHmmss')
+                    outputFileName = "${appName}-${variant.versionName}-${variant.name}-${formattedDate}.apk"
+                }
+            }
         }
     }
     productFlavors {
@@ -22,6 +30,7 @@ android {
 
 dependencies {
     implementation files('libs/afreechart-0.0.4.jar')
+
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
 }
